--- a/stats.html
+++ b/stats.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Persistent Gist Stats Dashboard</title>
+  <title>AdRevenuePro - Stats Dashboard</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #121212; color: #eee; padding: 2rem; }
-    .card { background: #1e1e1e; padding: 1.5rem; border-radius: 12px; box-shadow: 0 0 12px rgba(0,0,0,.5); max-width: 500px; margin: auto; }
-    input, button { width: 100%; margin-top: 1rem; padding: 0.75rem; border-radius: 8px; border: none; }
-    input { background: #2a2a2a; color: #fff; }
-    button { background: #4cafef; color: #fff; font-weight: bold; cursor: pointer; }
-    button:hover { background: #2196f3; }
-    .hidden { display: none; }
-    pre { background: #000; color: #0f0; padding: 1rem; border-radius: 8px; overflow-x: auto; max-height: 200px; }
+    body { background: #0f2027; color: #fff; font-family: Arial, sans-serif; padding: 2rem; }
+    .card { background: rgba(255,255,255,0.05); padding: 1.5rem; border-radius: 12px; margin-bottom: 1.5rem; }
+    h2 { color: #4facfe; }
+    input, button { padding: 0.75rem; border-radius: 6px; border: none; margin-top: 0.5rem; width: 100%; }
+    input { background: #1e1e1e; color: #fff; }
+    button { background: #4facfe; color: #fff; font-weight: bold; cursor: pointer; }
+    button:hover { background: #00f2fe; }
+    pre { background: #111; padding: 1rem; border-radius: 6px; color: #0f0; max-height: 150px; overflow-y: auto; }
   </style>
 </head>
 <body>
@@ -21,19 +21,22 @@
     <button onclick="login()">Login</button>
   </div>
 
-  <div class="card hidden" id="dashboard">
+  <div class="card" id="dashboard" style="display:none">
     <h2>📊 Dashboard</h2>
     <p id="welcome"></p>
-    <button onclick="updateStats()">Update Stats (Save to Gist)</button>
-    <p id="gistUrl"></p>
+    <p>Your Ad URL:</p>
+    <pre id="adUrl"></pre>
+    <h3>Stats</h3>
+    <div id="statsBox">Loading...</div>
     <h3>Console Log</h3>
     <pre id="console"></pre>
+    <button onclick="refreshStats()">Refresh</button>
     <button onclick="logout()">Logout</button>
   </div>
 
   <script>
     const tokenGistUrl = "https://gist.githubusercontent.com/Preasx24/c54812fe3d3e5f8d586f1dd010701919/raw/e6ebaaa6f2bb72ad1d2444b10ffb059f9c990fbe/gistfile1.txt";
-    const mappingGistId = "4517ac43eff88b7e226fbbdc627a3c08"; // universal mapping gist ID
+    const mappingGistId = "4517ac43eff88b7e226fbbdc627a3c08";
 
     function log(msg) {
       const consoleBox = document.getElementById('console');
@@ -42,98 +45,71 @@
     }
 
     async function getGitHubToken() {
-      log("Fetching GitHub token from gist...");
       const res = await fetch(tokenGistUrl);
-      if (!res.ok) throw new Error("Failed to fetch token gist");
-      const token = (await res.text()).trim();
-      log("✅ Token fetched");
-      return token;
-    }
-
-    function login() {
-      const code = document.getElementById('accessCode').value.trim();
-      if (!code) return alert("Enter a valid access code");
-      localStorage.setItem("user", JSON.stringify({ accessCode: code, stats: { logins: 0 } }));
-      document.getElementById('authCard').classList.add("hidden");
-      document.getElementById('dashboard').classList.remove("hidden");
-      document.getElementById('welcome').textContent = `Welcome, ${code}`;
-      log("🔑 Logged in with access code: " + code);
+      return (await res.text()).trim();
     }
 
     async function fetchMapping(token) {
       const res = await fetch(`https://api.github.com/gists/${mappingGistId}`, {
-        headers: { "Authorization": `token ${token}`, "Accept": "application/vnd.github+json" }
+        headers: { "Authorization": `token ${token}` }
       });
       const data = await res.json();
-      const fileContent = data.files["gistfile1.txt"].content;
-      return JSON.parse(fileContent || "{}");
+      return JSON.parse(data.files["gistfile1.txt"].content || "{}");
     }
 
     async function saveMapping(token, mapping) {
       await fetch(`https://api.github.com/gists/${mappingGistId}`, {
         method: "PATCH",
         headers: { "Authorization": `token ${token}`, "Accept": "application/vnd.github+json" },
-        body: JSON.stringify({
-          files: {
-            "gistfile1.txt": { content: JSON.stringify(mapping, null, 2) }
-          }
-        })
+        body: JSON.stringify({ files: { "gistfile1.txt": { content: JSON.stringify(mapping, null, 2) } } })
       });
     }
 
-    async function updateStats() {
-      let user = JSON.parse(localStorage.getItem("user"));
-      if (!user) return alert("Not logged in");
+    async function login() {
+      const code = document.getElementById("accessCode").value.trim();
+      if (!code) return alert("Enter code");
+      localStorage.setItem("userCode", code);
+      document.getElementById("authCard").style.display = "none";
+      document.getElementById("dashboard").style.display = "block";
+      document.getElementById("welcome").textContent = `Welcome, ${code}`;
+      document.getElementById("adUrl").textContent = `https://revenue.dtech-services.co.za/track.html#${code}`;
+      await refreshStats();
+    }
 
-      user.stats.logins += 1;
-      localStorage.setItem("user", JSON.stringify(user));
-
-      try {
-        const token = await getGitHubToken();
-        log("📡 Fetching mapping gist...");
-        let mapping = await fetchMapping(token);
-
-        let gistId = mapping[user.accessCode];
-        if (!gistId) {
-          log("🆕 Creating new gist for this user...");
-          const createRes = await fetch("https://api.github.com/gists", {
-            method: "POST",
-            headers: { "Authorization": `token ${token}`, "Accept": "application/vnd.github+json" },
-            body: JSON.stringify({
-              description: `Stats for ${user.accessCode}`,
-              public: false,
-              files: { "stats.json": { content: JSON.stringify(user.stats, null, 2) } }
-            })
-          });
-          const createData = await createRes.json();
-          gistId = createData.id;
-          mapping[user.accessCode] = gistId;
-          await saveMapping(token, mapping);
-          log("✅ New gist created and mapping updated: " + createData.html_url);
-          document.getElementById('gistUrl').textContent = "Gist: " + createData.html_url;
-        } else {
-          log("✏️ Updating existing gist: " + gistId);
-          const patchRes = await fetch(`https://api.github.com/gists/${gistId}`, {
-            method: "PATCH",
-            headers: { "Authorization": `token ${token}`, "Accept": "application/vnd.github+json" },
-            body: JSON.stringify({
-              files: { "stats.json": { content: JSON.stringify(user.stats, null, 2) } }
-            })
-          });
-          const patchData = await patchRes.json();
-          log("✅ Stats updated: " + patchData.html_url);
-          document.getElementById('gistUrl').textContent = "Gist: " + patchData.html_url;
-        }
-      } catch (e) {
-        log("❌ Error: " + e.message);
+    async function refreshStats() {
+      const code = localStorage.getItem("userCode");
+      const token = await getGitHubToken();
+      let mapping = await fetchMapping(token);
+      let gistId = mapping[code];
+      if (!gistId) {
+        log("Creating new gist for " + code);
+        const res = await fetch("https://api.github.com/gists", {
+          method: "POST",
+          headers: { "Authorization": `token ${token}` },
+          body: JSON.stringify({
+            description: `Stats for ${code}`,
+            public: false,
+            files: { "stats.json": { content: JSON.stringify({ totalClicks:0, todayClicks:0, totalRevenue:0, todayRevenue:0 }, null, 2) } }
+          })
+        });
+        const data = await res.json();
+        gistId = data.id;
+        mapping[code] = gistId;
+        await saveMapping(token, mapping);
       }
+      const gistRes = await fetch(`https://api.github.com/gists/${gistId}`, {
+        headers: { "Authorization": `token ${token}` }
+      });
+      const gistData = await gistRes.json();
+      const stats = JSON.parse(gistData.files["stats.json"].content);
+      document.getElementById("statsBox").textContent = JSON.stringify(stats, null, 2);
+      log("Loaded stats for " + code);
     }
 
     function logout() {
-      localStorage.removeItem("user");
-      document.getElementById('dashboard').classList.add("hidden");
-      document.getElementById('authCard').classList.remove("hidden");
-      log("👋 Logged out");
+      localStorage.removeItem("userCode");
+      document.getElementById("dashboard").style.display = "none";
+      document.getElementById("authCard").style.display = "block";
     }
   </script>
 </body>
