--- a/track.html
+++ b/track.html
@@ -1,65 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Ad Tracker</title>
+  <meta charset="utf-8" />
+  <title>Tracker</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #111; color: #fff; text-align: center; padding: 2rem; }
-    .box { background: #222; padding: 2rem; border-radius: 10px; display: inline-block; }
+    body{font-family:Arial;background:#071018;color:#cfefff;display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
+    .box{background:rgba(255,255,255,0.03);padding:20px;border-radius:10px;max-width:560px;text-align:center}
   </style>
 </head>
 <body>
   <div class="box">
-    <h2>📡 Tracking Recorded</h2>
-    <p id="msg">Processing...</p>
+    <h2>📡 Tracking...</h2>
+    <p id="message">Checking access code...</p>
   </div>
-  <script>
-    const tokenGistUrl = "https://gist.githubusercontent.com/Preasx24/c54812fe3d3e5f8d586f1dd010701919/raw/e6ebaaa6f2bb72ad1d2444b10ffb059f9c990fbe/gistfile1.txt";
-    const mappingGistId = "4517ac43eff88b7e226fbbdc627a3c08";
 
-    async function getGitHubToken() {
-      const res = await fetch(tokenGistUrl);
-      return (await res.text()).trim();
-    }
+<script>
+const tokenGistUrl = "https://gist.githubusercontent.com/Preasx24/c54812fe3d3e5f8d586f1dd010701919/raw/e6ebaaa6f2bb72ad1d2444b10ffb059f9c990fbe/gistfile1.txt";
+const mappingGistId = "4517ac43eff88b7e226fbbdc627a3c08";
 
-    async function fetchMapping(token) {
-      const res = await fetch(`https://api.github.com/gists/${mappingGistId}`, {
-        headers: { "Authorization": `token ${token}` }
-      });
-      const data = await res.json();
-      return JSON.parse(data.files["gistfile1.txt"].content || "{}");
-    }
+function setMsg(t){ document.getElementById('message').textContent = t; }
 
-    async function track() {
-      const code = location.hash.slice(1);
-      if (!code) { document.getElementById("msg").textContent = "No access code"; return; }
-      const token = await getGitHubToken();
-      const mapping = await fetchMapping(token);
-      const gistId = mapping[code];
-      if (!gistId) { document.getElementById("msg").textContent = "Invalid access code"; return; }
+async function getGitHubToken(){
+  const r = await fetch(tokenGistUrl);
+  if(!r.ok) throw new Error("No token");
+  return (await r.text()).trim();
+}
 
-      const gistRes = await fetch(`https://api.github.com/gists/${gistId}`, {
-        headers: { "Authorization": `token ${token}` }
-      });
-      const gistData = await gistRes.json();
-      let stats = JSON.parse(gistData.files["stats.json"].content);
+async function fetchMapping(token){
+  const r = await fetch(`https://api.github.com/gists/${mappingGistId}`, {
+    headers: { "Authorization": `token ${token}`, "Accept":"application/vnd.github+json" }
+  });
+  if(!r.ok) throw new Error("Failed mapping fetch: " + r.status);
+  const data = await r.json();
+  try {
+    const raw = data.files["gistfile1.txt"] && data.files["gistfile1.txt"].content;
+    const parsed = raw ? JSON.parse(raw) : {};
+    if(Array.isArray(parsed)) return {};
+    if(typeof parsed !== 'object' || parsed === null) return {};
+    return parsed;
+  } catch(e){
+    return {};
+  }
+}
 
-      stats.totalClicks++;
-      stats.todayClicks++;
-      stats.totalRevenue += 0.01;
-      stats.todayRevenue += 0.01;
-      stats.lastUpdated = new Date().toISOString();
+async function loadGistStats(token, gistId){
+  const r = await fetch(`https://api.github.com/gists/${gistId}`, {
+    headers: { "Authorization": `token ${token}`, "Accept":"application/vnd.github+json" }
+  });
+  if(!r.ok) throw new Error("Failed read gist: " + r.status);
+  const data = await r.json();
+  try {
+    const raw = data.files["stats.json"] && data.files["stats.json"].content;
+    const stats = raw ? JSON.parse(raw) : {};
+    return { stats, html_url: data.html_url || `https://gist.github.com/${gistId}` };
+  } catch(e) {
+    return { stats: {}, html_url: data.html_url || `https://gist.github.com/${gistId}` };
+  }
+}
 
-      await fetch(`https://api.github.com/gists/${gistId}`, {
-        method: "PATCH",
-        headers: { "Authorization": `token ${token}` },
-        body: JSON.stringify({ files: { "stats.json": { content: JSON.stringify(stats, null, 2) } } })
-      });
+async function patchGist(token, gistId, stats){
+  const r = await fetch(`https://api.github.com/gists/${gistId}`, {
+    method: "PATCH",
+    headers: { "Authorization": `token ${token}`, "Content-Type":"application/json", "Accept":"application/vnd.github+json" },
+    body: JSON.stringify({ files: { "stats.json": { content: JSON.stringify(stats, null, 2) } } })
+  });
+  if(!r.ok) throw new Error("Failed patch: " + r.status);
+  return await r.json();
+}
 
-      document.getElementById("msg").textContent = `Tracked click for ${code}!`;
-    }
+async function track(){
+  try {
+    const code = location.hash.slice(1);
+    if(!code) { setMsg("No access code in URL"); return; }
+    setMsg("Resolving mapping for: " + code);
+    const token = await getGitHubToken();
+    const mapping = await fetchMapping(token);
+    const gistId = mapping[code];
+    if(!gistId) { setMsg("Invalid access code"); return; }
+    setMsg("Found gist: " + gistId + " — loading stats...");
+    const { stats } = await loadGistStats(token, gistId);
 
-    track();
-  </script>
+    // ensure fields
+    stats.totalClicks = (stats.totalClicks || 0) + 1;
+    stats.todayClicks = (stats.todayClicks || 0) + 1;
+    const perClick = 0.01;
+    stats.totalRevenue = (stats.totalRevenue || 0) + perClick;
+    stats.todayRevenue = (stats.todayRevenue || 0) + perClick;
+    stats.lastUpdated = new Date().toISOString();
+    stats.activity = stats.activity || [];
+    stats.activity.push({ date: new Date().toISOString(), clicks: 1, revenue: perClick, cpm: (stats.cpm || 2.5) });
+    if(stats.activity.length > 250) stats.activity = stats.activity.slice(-250);
+
+    await patchGist(token, gistId, stats);
+    setMsg("Tracked click for " + code + " ✅");
+  } catch (err) {
+    setMsg("Error: " + (err.message || err));
+  }
+}
+
+track();
+</script>
 </body>
 </html>
